--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">User Login</string>
+    <string name="app_name">Peela Bus</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -8,4 +8,12 @@
     <string name="action_settings">Settings</string>
     <string name="action_notifications">Notifications</string>
     <string name="title_activity_change_password">ChangePassword</string>
+    <string name="title_activity_notification_settings">Settings</string>
+
+    <string name="map_type_none">None</string>
+    <string name="map_type_normal">Normal</string>
+    <string name="map_type_terrain">Terrain</string>
+    <string name="map_type_satellite">Satellite</string>
+    <string name="map_type_hybrid">Hybrid</string>
+
 </resources>
